[build-system]
requires = ["maturin>=1.8"]
build-backend = "maturin"

[project]
name = "cooklang-py-mist"
version = "0.1.0"  # Specify your project version
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]